<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="UpdateSync" Id="{fbede189-66e5-4c6c-89b0-805380f05e5b}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM UpdateSync
VAR
	fbSqlDatabase : FB_SQLDatabaseEvt(sNetID := '', tTimeout := T#5S);
	fbSqlCommand : FB_SQLCommandEvt(sNetID := '', tTimeout := T#5S);
	myDBID: UDINT := 1;
	sTableName: STRING := 'Data';
	sCmd: STRING(1000);
	
	tcMessage1 : I_TcMessage;
	tcMessage2 : I_TcMessage;
	
	bFirstScan: BOOL := TRUE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF (bFirstScan) THEN
	IF fbSqlDatabase.Connect(myDBID) THEN
		bFirstScan := FALSE;
		IF fbSqlDatabase.bError THEN
			tcMessage1:= fbSqlDatabase.ipTcResult;
			bFirstScan := TRUE;
		END_IF
	END_IF
END_IF

IF GlobalData.bRemotePosted THEN
	CreateUpdate();
		
	IF fbSqlDatabase.CreateCmd(ADR(fbSqlCommand)) THEN
		IF fbSqlDatabase.bError THEN
			tcMessage1:= fbSqlDatabase.ipTcResult;
		END_IF
	END_IF
		
	IF fbSQLCommand.Execute(ADR(sCmd), LEN(sCmd)) THEN
		IF fbSQLCommand.bError THEN
			tcMessage2 := fbSQLCommand.ipTcResult;
		END_IF
		GlobalData.bRemotePosted := FALSE;
		GlobalData.blocalUpdated := TRUE;
		GlobalData.bMeasure := FALSE;
	END_IF
END_IF
]]></ST>
    </Implementation>
    <Action Name="CreateUpdate" Id="{662f267f-a8f2-449b-a2ef-87a7054b0c20}">
      <Implementation>
        <ST><![CDATA[sCmd := 'UPDATE ';
sCmd := concat(sCmd, sTableName);
sCmd := concat(sCmd, ' SET Sync=');
sCmd := concat(sCmd, BOOL_TO_STRING(TRUE));
sCmd := concat(sCmd, ' WHERE Id=');
sCmd := concat(sCmd, LINT_TO_STRING(GlobalData.aReadStruct.iId));]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="UpdateSync">
      <LineId Id="68" Count="8" />
      <LineId Id="60" Count="0" />
      <LineId Id="31" Count="8" />
      <LineId Id="41" Count="3" />
      <LineId Id="63" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="56" Count="1" />
    </LineIds>
    <LineIds Name="UpdateSync.CreateUpdate">
      <LineId Id="2" Count="2" />
      <LineId Id="16" Count="1" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>